# datastruct-practice

./: .gitignore  1-list.ipynb  2-queue.ipynb  CMakeLists.txt  README.md
include/datastruct/: array_list.h  linked_list.h  queue.h  stack.h  tree.h
src/: array_list.c  linked_list.c  queue.c  stack.c  tree.c
tests/: test_array_list.cpp  test_linked_list.cpp  test_queue.cpp  test_stack.cpp  test_tree.cpp
